tests/errors/comma-in-record-value-bare-word.wit
@x
  - { msg - hello, world }
x@
